--- a/modules/items/client/views/edit-item.client.view.html
+++ b/modules/items/client/views/edit-item.client.view.html
@@ -6,15 +6,15 @@
     <form name="itemForm" class="form-horizontal" data-ng-submit="update()" novalidate>
       <fieldset>
         <div class="form-group">
-          <label class="control-label" for="title">Title</label>
+          <label class="control-label" for="foodItem">Food Item</label>
           <div class="controls">
-            <input name="title" type="text" data-ng-model="item.title" id="title" class="form-control" placeholder="Title" required>
+            <input name="foodItem" type="text" data-ng-model="item.foodItem" id="foodItem" class="form-control" placeholder="item" required>
           </div>
         </div>
         <div class="form-group">
-          <label class="control-label" for="content">Content</label>
+          <label class="control-label" for="price">Price</label>
           <div class="controls">
-            <textarea name="content" data-ng-model="item.content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
+            <input name="price" type="text" data-ng-model="item.price" id="price" class="form-control" placeholder="rupees">
           </div>
         </div>
         <div class="form-group">
