--- a/modules/items/client/views/view-item.client.view.html
+++ b/modules/items/client/views/view-item.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="ItemsController" data-ng-init="findOne()">
   <div class="page-header">
-    <h1 data-ng-bind="item.title"></h1>
+    <h1 data-ng-bind="item.foodItem"></h1>
   </div>
   <div class="pull-right" data-ng-show="authentication.user._id == item.user._id">
     <a class="btn btn-primary" data-ui-sref="items.edit({itemId: item._id})">
@@ -10,13 +10,5 @@
       <i class="glyphicon glyphicon-trash"></i>
     </a>
   </div>
-  <small>
-    <em class="text-muted">
-      Posted on
-      <span data-ng-bind="item.created | date:'mediumDate'"></span>
-      by
-      <span data-ng-bind="item.user.displayName"></span>
-    </em>
-  </small>
-  <p class="lead" data-ng-bind="item.content"></p>
+  <p class="lead" data-ng-bind="item.price"></p>
 </section>
