task 1 and task 2 completed

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -33,3 +33,9 @@ a:hover .header-profile-image {
   padding-top: 11px !important;
   padding-bottom: 11px !important;
 }
+.text-center {
+  text-align: center;
+}
+.background-color {
+    background-color: #ff000a;
+}
