--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,7 +1,9 @@
 <section data-ng-controller="ItemsController" data-ng-init="find()">
-  <div class="page-header">
-    <h1>Menu</h1>
+  <div class='text-center'>
+    <h1>Burger and Fries</h1>
   </div>
+    <p class="lead">Delicious Burgers of type chicken, beef, Jalapeño, Turkey Burger with a Twist, Chipotle Turkey Burgers and fries of type steak and curly fries are provided.</p>
+
   <div class="list-group">
     <a data-ng-repeat="item in items" class="list-group-item">
       <h4 class="list-group-item-heading" data-ng-bind="item.foodItem"></h4>
